Change image to fit with slide

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
     </section>
   </div></div>
 
-  <div id="builders" class="slide cover w"><div>
+  <div id="test" class="slide cover w"><div>
     <section>
       <header>
         <h2>Mozilla Malaysia Community</h2>
       </header>
-      <img src="pictures/NEO_7045.jpg" alt="Builders" class="middle shadow">
+      <img src="pictures/mozillamy.jpg" height="400" width="400" alt="test" class="middle shadow">
     <footer class="notes">
       Being founded on July 2011 as small community in Kuala Lumpur. Hence, we are prioritising community building in the organisation. A core group across all functional areas has been formed.
     </footer>
